changed address and contacts

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     
     <header class="nav">
         <div class="contact">
-            <p>Roxas Etx., Brgy. Tres de mayo, 8002 Digos, Davao del sur </p>
-            <p>0942-4740-088</p>
+            <p>Main Etx., Fifth St., 1234 KM, Somewhere</p>
+            <p>0123-4567-899</p>
             <!-- <p>sampleemail@email.com</p> -->
         </div>
         <div class="dropdown">
@@ -225,9 +225,9 @@
             <h2 class="title titlechild">Address</h2>
             <hr class="goldline"/>
             <div class="address-container">
-                <p>Roxas Etx., Brgy. Tres de mayo,</p>
-                <p>8002 Digos, Davao del sur </p>
-                <p>0942-4740-088</p>
+                <p>Main Etx., Fifth St.,</p>
+                <p>1234 KM, Somewhere</p>
+                <p>0123-4567-899</p>
                 <!-- <p>sampleemail@email.com</p> -->
             </div>
         </div>
